StarSpan ChangeLog
$Id$

2008-04-05 (1.0.08)
    - tests/Makefile: use zcat for comparison instead of gunzip
      (so the .gz, which is on CVS, is preserved).
      
    - Removed FR 200347: --mini_raster_box option
    
    - Added FR 200348: extract a centered box wrt feature's bounding box.
    
      This is implemented with the --box option, which behaves as a variant
      of the --buffer operation, so it's handled by traverser. 
      Only one of --buffer or --box may be specified.
      
      
    - Removed starspan_minirasterstrip.cc (function starspan_miniraster_strip())
      Was never implemented.
      
    
2008-03-27 (1.0.08)
    - Fresh release to facilitate creation of windows binaries.
    
2008-03-03 (1.0.07)
    - Adding options --sql, --where, and --dialect à la ogrinfo.
      Preliminary tests OK.
        
      More details about the syntax for --sql:  http://gdal.org/ogr/ogr_sql.html
      The "where" section corresponds to the --where option.

      In starspan you will write something like for example:
        starspan --vector myvector.shp \
                 --where "(SITE_ID >= 10) and (SITE_ID <= 20)"  ...other options...

      Although more tests are pending, I think these new options should work as 
      expected.

      
    - removed unneeded starspan_csv_dup_pixel.cc from Makefile.am
    
    - configure.in, starspan.in: using program_prefix and program_suffix to
      refer to binary executable, so the corresponding ./configure options
      are honored.
      
    - Adjustments to GEOS include files according to deprecated warning
      issued by GEOS 3.0.0
      
      
    - Since GDAL and GRASS are working nicely together on pegasus, I just made a
      basic test to confirm that starspan can access vector and raster GRASS
      datasets, and everything seems to work fine. For example, according the 
      the naming of the datasorces explainded in http://gdal.org/ogr/drv_grass.html