@@ -1,6 +1,12 @@
 StarSpan ChangeLog
 $Id$
 
+2008-04-10
+    - Some code cleanup:
+        Removed vector/{Makefile,Vector_shapelib.cc}
+        
+    - Adding shapefile creation for mini_raster_strip
+        
 2008-04-05 (1.0.08)
     - tests/Makefile: use zcat for comparison instead of gunzip
       (so the .gz, which is on CVS, is preserved).
